<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/card_container"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="wrap_content"
              android:layout_margin="16dp"
              android:gravity="center"
              android:background="@android:color/white">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:textAlignment="center"
              android:text="@string/please_type_your_airport_or_iata_code_from_origin_and_destination"/>
    <TextView android:id="@+id/selected_origin_name"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:textAlignment="center"
    />
    <MultiAutoCompleteTextView
            android:hint="@string/hint_origin_airport"
            android:id="@+id/origin_text"
            android:layout_margin="16dp"
            android:maxLength="3"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <TextView android:id="@+id/selected_destiny_name"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:textAlignment="center"/>
    <MultiAutoCompleteTextView
            android:hint="@string/hint_destiny_airport"
            android:maxLength="3"
            android:id="@+id/destiny_text"
            android:layout_margin="16dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_height="wrap_content">

        <Button android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_search"/>
        <Button
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:text="@string/close_window"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>